# KODC

./: .env.example  .gitignore  NIFS_API_KEY.example  README.md  pixi.toml  pyproject.toml
data/: README.md
notebooks/: explore_outputs.ipynb
outputs/: README.md
src/: convert_json_to_csv.ipynb  get_kodc.py  slice_line208.ipynb
src/kodc/: __init__.py  analysis.py  cli.py  config.py  convert.py  download.py  metadata.py  preprocess.py  visualize.py
tests/: test_analysis.py  test_config.py  test_convert.py  test_metadata.py  test_preprocess.py  test_visualize.py
tests/fixtures/: kodc_empty.json  kodc_normal.json  kodc_synthetic.csv  soo_code_E.json
